--- a/style.css
+++ b/style.css
@@ -4,76 +4,119 @@
 }
 
 html {
-    font-size: 14
+    font-size: 14px;
 }
 
 body {
+    margin: 0;
+    height: 100vh;
+    width: 100vw;
+}
+
+/*Containers*/
+.container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     background-color: hsl(0, 0%, 8%);
 }
 
-button {
-    background-color: hsl(0, 0%, 20%);
-    border: none;
-    border-radius: 8px;
-    display: inline-block;
-    width: 100%;
-    height: 5%;
-    margin-bottom: 5%;
-    font-weight: 600;
-    transition-duration: 0.3;
+.description-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    background-color: hsl(0, 0%, 12%);
+    border-radius: 1rem;
+    padding: 1.5rem;
+    width: 70%;
+    height: 80%;
 }
 
-button:hover {
+/*Classes*/
+.description-text {
+    color: white;
+    margin: 0;
+    font-family: Inter;
+}
+
+.avatar {
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
+}
+
+.user-link {
+    text-decoration: none;
+    color: white;
+    width: 100%;
+    background-color: hsl(0, 0%, 20%);
+    margin: 1rem 0 1rem 0;
+    padding: 0.8rem 0 0.8rem 0;
+    border-radius: 5px;
+    font-family: Inter;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.user-link:hover {
     background-color: hsl(75, 94%, 57%);
     color: hsl(0, 0%, 20%);
 }
 
-button:active {
-    background-color: white;
-    color: hsl(0, 0%, 20%);
-}
-
-.profile-card {
-    background-color: hsl(0, 0%, 12%);
-    position: relative;
-    text-align: center;
-    top: 15%;
-    margin-left: 42%;
-    margin-right: 42%;
-    border-radius: 10px;
-    padding: 1% 0 1% 0;
-    font-size: 1rem;
-}
-
-.description-container{
-    margin: 0 10% 0 10%;
-}
-
-.text {
-    font-family: Inter;
-    color: white;
-}
-
-
-.avatar {
-    border-radius: 50%;
-    width: 90px;
-    height: 90px;
-    margin: 5% 0 5% 0;
-}
-
-#header {
+/*IDs*/
+#user-name {
+    margin-top: 1.5rem;
     font-size: 1.5rem;
     font-weight: 700;
 }
 
-#location {
+#user-location {
+    margin-top: 0.5rem;
     color: hsl(75, 94%, 57%);
-    font-size: 1rem;
     font-weight: 600;
 }
 
-#position {
-    padding: 3% 0 2% 0;
+#user-description {
+    margin: 1.5rem 0 1.5rem 0;
     font-weight: 400;
+}
+
+#github {
+    margin-top: 0;
+}
+
+@media screen and (min-width: 576px) {
+
+    .description-container {
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .description-container {
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 992px){
+    .description-container {
+        width: 40%;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .description-container {
+        width: 30%;
+    }    
+}
+
+@media screen and (min-width: 1400px) {
+    .description-container {
+        width: 20%;
+    }
 }
